# sight

./: .env.example  Dockerfile  Pipfile  camera.py  docker-compose.yml  main.py  pyproject.toml  webcam.py
capture/: opencv.py  picamera.py
services/: brian.py  identify.py
