[tool.poetry]
name = "sight"
version = "0.1.0"
description = ""
authors = ["Sean Lim <seanlimdev856@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
python-dotenv = "^0.10.3"
face-recognition = "^1.2"
opencv-python = "^4.1"
requests = "^2.22"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
